feedhq/feeds/static/feeds/css/partials/_320.scss
@media only screen and (max-width: 767px) {
	#header {
		@include grid(4);
		padding: 0;
		position: relative;

		h1, #navigation {
			@include cols(4);
			margin: 0;
		}

		#navigation {
			font-size: 0.8em;
			position: absolute;
			top: 10px;
			right: 0;

			background: lighten($text, 75%) url('../img/Settings.png') no-repeat 5px 5px;
			&:hover, &.active {
				background: $text url('../img/Settings-white.png') no-repeat 5px 5px;
			}
		}

		#add-menu {
			background: lighten($text, 75%) url('../img/Dropdown.png') no-repeat 5px 5px;
			margin-right: 25px;

			&:hover, &.active {
				background: $text url('../img/Dropdown-white.png') no-repeat 5px 5px;
			}
		}

		#add-menu, #navigation {
			display: block !important;
			float: right;
			margin-top: 3px;
			width: 20px;
			height: 20px;
			border-radius: 5px;

			&:hover, &.active {
				background-color: $text;
				color: white;
			}

			li {
				display: none !important;
			}
		}
	}

	#footer, #content, #categories, #options {
		@include grid(4);
		padding: 0;
	}

	.figures {
		&.bottom {
			padding-left: 0;
		}

		.count, .back {
			width: 100%;
			margin: 0;
			white-space: inherit;

			input {
				font-size: 0.8rem;
			}
		}

		.back {
			@include cols(1);
			white-space: nowrap;
		}

		.pagination {
			float: right;
		}
	}

	form {
		margin: 0;
		margin-top: 1em;

		.field, .title, .input, .submit {
			width: 100%;
			margin: 0;
			text-align: left;
		}

		.input input[type="checkbox"] {
			width: auto;
		}
	}

	.entry {
		.title {
			width: column-width(4) - 20;
			white-space: inherit;
		}

		.date {
			margin: 0;
			width: 100%;
			font-size: 0.8em;
			text-align: right;
			border-bottom: 1px solid lighten($text, 75%);
		}
	}

	#entry {
		width: 100%;
		padding: 0;

		.actions, .content {
			width: 100%;
			margin: 0;
		}
	}

	.content {
		pre, img {
			overflow: auto;
		}
	}
}

